<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/title"
        android:layout_margin="16dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/carros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cars"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorites"
        android:layout_marginStart="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/carros"
        app:layout_constraintTop_toTopOf="@id/carros"
        />

    <ImageView
        android:id="@+id/iv_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/eletric_car"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/carros"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- É uma boa prática nomear o id com as duas iniciais do tipo
    de widgets e o nome, assim como no exemplo abaixo.-->
    <TextView
        android:id="@+id/tv_preco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/price_car1"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_car"
        />

    <TextView
        android:id="@+id/tv_preco_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:text="@string/value_car"
        app:layout_constraintStart_toStartOf="@id/tv_preco"
        app:layout_constraintTop_toBottomOf="@id/iv_car" />

    <TextView
        android:id="@+id/tv_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/battery"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_preco"
        />

    <TextView
        android:id="@+id/tv_battery_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:text="@string/value_battery"
        app:layout_constraintStart_toStartOf="@id/tv_battery"
        app:layout_constraintTop_toBottomOf="@id/tv_preco_value"
        />

    <TextView
        android:id="@+id/tv_potency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/potency"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_battery"
        />

    <TextView
        android:id="@+id/tv_potency_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:text="@string/value_potency"
        app:layout_constraintStart_toStartOf="@id/tv_potency"
        app:layout_constraintTop_toBottomOf="@id/tv_battery_value"
        />

    <TextView
        android:id="@+id/tv_charging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/charging"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_potency"
        />

    <TextView
        android:id="@+id/tv_charging_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:text="@string/value_charging"
        app:layout_constraintStart_toStartOf="@id/tv_charging"
        app:layout_constraintTop_toBottomOf="@id/tv_potency_value"
        />

    <EditText
        android:id="@+id/et_preco"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/preco_kwh"
        android:maxLength="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_charging_value"
        />

    <EditText
        android:id="@+id/et_km_percorrido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/km"
        android:maxLength="10"
        android:layout_marginTop="4dp"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@id/et_preco"
        app:layout_constraintStart_toStartOf="@id/et_preco"
        app:layout_constraintTop_toBottomOf="@id/et_preco"
        />

    <Button
        android:id="@+id/bCalcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_km_percorrido"
        app:layout_constraintStart_toStartOf="@id/et_km_percorrido"
        app:layout_constraintEnd_toEndOf="@id/et_km_percorrido"
        android:text="@string/calcular"
        android:textStyle="bold"
        android:backgroundTint="@color/black"
        android:layout_marginTop="4dp"
        />

    <TextView
        android:id="@+id/tv_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/et_preco"
        app:layout_constraintStart_toStartOf="@id/et_preco"
        app:layout_constraintTop_toBottomOf="@id/bCalcular"

        />


</androidx.constraintlayout.widget.ConstraintLayout>