<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <!--Construção do card passando os parâmetros-->
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/gray"
        >

        <!--Construção da estrutura do card, contendo os componentes-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/iv_car"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/eletric_car"
                android:layout_margin="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <!-- É uma boa prática nomear o id com as duas iniciais do tipo
            de widgets e o nome, assim como no exemplo abaixo.
            O style aplicado abaixo é semelhante ao body do textStyle -->
            <TextView
                android:id="@+id/tv_preco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/price_car1"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_car"
                />

            <TextView
                android:id="@+id/tv_preco_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:text="@string/value_car"
                app:layout_constraintStart_toStartOf="@id/tv_preco"
                app:layout_constraintTop_toBottomOf="@id/iv_car"
                style="@style/TextAppearance.AppCompat.Body1"
                />

            <TextView
                android:id="@+id/tv_battery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_preco"
                style="@style/TextAppearance.AppCompat.Body2"
                />

            <TextView
                android:id="@+id/tv_battery_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:text="@string/value_battery"
                app:layout_constraintStart_toStartOf="@id/tv_battery"
                app:layout_constraintTop_toBottomOf="@id/tv_preco_value"
                style="@style/TextAppearance.AppCompat.Body1"
                />

            <TextView
                android:id="@+id/tv_potency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/potency"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_battery"
                style="@style/TextAppearance.AppCompat.Body2"
                />

            <TextView
                android:id="@+id/tv_potency_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:text="@string/value_potency"
                app:layout_constraintStart_toStartOf="@id/tv_potency"
                app:layout_constraintTop_toBottomOf="@id/tv_battery_value"
                style="@style/TextAppearance.AppCompat.Body1"
                />

            <TextView
                android:id="@+id/tv_charging"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/charging"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_potency"
                style="@style/TextAppearance.AppCompat.Body2"
                />

            <TextView
                android:id="@+id/tv_charging_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="72dp"
                android:text="@string/value_charging"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="@id/tv_charging"
                app:layout_constraintTop_toBottomOf="@id/tv_potency_value"
                app:layout_constraintBottom_toBottomOf="@id/cl_layout"
                style="@style/TextAppearance.AppCompat.Body1"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>